# archivanima

./: .gitignore  Cargo.toml  Docker.Rocket.toml  Dockerfile  Example.Rocket.toml  README.md  assets.json  docker-compose.yml  package-lock.json  package.json  sqlx-data.json  tsconfig.json
.sqlx/: query-01aa6120889c78688854c19949b9d8157b96ebfe42a14e714a2ffee59753da58.json  query-0dd5228262c5580f9a3ccf1d7e2def25373ce07351da06d927822fa0677c6e13.json  query-151352b2a730cac38991b52f48219f662cb44b8cbf0f23f54a3ffb1ac277a1bb.json  query-246ce89c5a422be7e824801bd0d0f386c641f66cf251c3eec033683aad4aad6d.json  query-32a19315ba69439d3bf74e8fe65670f7e6d3c02993d81e262727eedaf1f944ff.json  query-343454c8585d730d5078aa818ef7f7a40adc7ee77c88044768b16f887473e24d.json  query-356bcd1864c6acd336f9d829af1b523d52c16623b7056469895e9e71fc428c39.json  query-36962bbc95f5ef4af1370e78fc0b730852a94262673f792a048a2bfbc77124fa.json  query-389abd8b9e8db7064b61f80f8a57d7539c267f642ced907daa2ff3a154194f8c.json  query-39c9e227b2277afd97976f9f78ba3e820bb08cded79a7516c4a173f6762da9da.json  query-3a157c74ff41607e6e88ae6921158753ef840b9767fa2c7158aee351431f761f.json  query-3c682355cc02f901c91fd3adb21815ac11255fb0b20b5a43e0829966de3e162b.json  query-3eae3e8a88fbaf93f94a17b7f18a11c64b66c75bd1a4ea9093c934ebf46f385d.json  query-40e02aa54144b6607803a93817d9f74ecc1fd2c62bfdfd33993d15d000272c77.json  query-414d62214f60e92f3b92c81038d66d7cfd658bcd2db30e007607de8b140893b4.json  query-4c2e75ee89de55463a5db4dd84dd974077930eccc52bb5fdc18e61054043a569.json  query-543d5a22f18e3430401f95ad3d2c8606f9914697d35b34397d6691a5322055d3.json  query-5d1c5c9841824b41f15ac1bd4f2d4d42f87453f743bed354ce88f015270c9783.json  query-609cea5fd072865486e2b76df7f3c4c02469bfbf7805870aca1e0bc98fa3943e.json  query-63fc0e0e0c81a4445b6f4733ab0ca836fa520c5e0ba033ba426a9bac3b69670e.json  query-66a872fd63057698212dcbe0c07699c765cb08bd868d421f9be912a53556d819.json  query-695779c2cbf4be0a1479b542f158f515c0826ef54a472a70fefd7d08b6ed8312.json  query-83c90bbdb5d5279d7a43be8fe0ac5d4725ff42e12a81178bb2e17f4fdf4f486a.json  query-88e0dcb1d2e00745e19f9d6954c1898b7c20c5bcadadb3b2ef1df6d94674599b.json  query-89fa4ab1f63608880039787952f892acf34d87da54d544384176895b1b2f7013.json  query-91a14a2c914382b01b6f60b4b5109b20ac639f4df9a61f290fc5dc40bf0b73d5.json  query-95c418d7424ff376434a5853042af53bace7ce76d64edd189093075f8e79e333.json  query-a0c94b2ca3acc0be269f6e4ced552537babc97db39b8087fafa82decc4908eff.json  query-a9b9fbeccd429ecdbbae98b36f6d1e1ca950aaac505d4198fc14abd536c5a36e.json  query-b137f4c82d492ec88b1baa822ebb79c59f6ce77f984ba0e7e473f28d5c272a04.json  query-bcd6cd92d564e0704f1c16a697caa0eae90c52086e547acfe70f7d995250df0e.json  query-bfb33e5360afc964260c6e59a3218b0cdf3415032ef1e457555e6f31303d57a9.json  query-c351761c112972064aea0b6c8c2eac1c936f9cb810d15ebeddf5acdd5cd612ae.json  query-c5df12b6c21bccc6aeac7a437daab95d834beabe12a2a499dfa178476eec31a6.json  query-c8b9af90cf5cd4f2047399ee4322020c781e28644e65fad937709df5ade637ec.json  query-cad22cd09d7e10d0ffa58e4f611a235e222315b63c38bfeb5fed7e7f0e3115ce.json  query-d0eca0a4164ffe267cd80866c511f5881866a54ea57974dae8c32206209d42be.json  query-d5d3fec0014315e248f1b063cb196259a29c249d803c35331583f6d94b821eb8.json  query-d76746dcdb95cd612f2b5f2f1d48734e05358d3d313dc95a5da3410996c24395.json  query-d992e8daed05967e240f5e76c4f50f3d43191d5d7dc83cfdb9ba4d21ce442cc9.json  (+5 more)
(+67 files in other folders)
